--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -89,8 +89,12 @@ function sendValues(override){
 };
 
 var init = function init() {
-	dragger1.off();
-	dragger2.off();
+	if (dragger1 != undefined) {
+		dragger1.off();
+	}
+	if (dragger2 != undefined) {
+		dragger2.off();
+	}
 
 	console.log("init");
 
