--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -97,7 +97,7 @@ var init = function init() {
 		dragger2.off();
 	}
 
-	console.log("init" typeof dragger1, dragger1);
+	console.log("init", typeof dragger1, dragger1);
 
 	ctx = document.getElementById('canvas').getContext('2d');
 
