--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -91,9 +91,11 @@ function sendValues(override){
 var init = function init() {
 
 	if (dragger1 != undefined) {
+		console.log("removed dragger1 events");
 		dragger1.off();
 	}
 	if (dragger2 != undefined) {
+		console.log("removed dragger2 events");
 		dragger2.off();
 	}
 
