--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -114,7 +114,7 @@ var init = function init() {
 	stage.mouseMoveOutside = true; 
 
 	var line = new createjs.Shape();
-    line.graphics.moveTo(windowWidth/4-50,windowHeight/2).setStrokeStyle(1).beginStroke("#00ff00").lineTo(windowWidth/4+50,windowHeight/2);
+    line.graphics.moveTo((windowWidth/4)-50,windowHeight/2).setStrokeStyle(1).beginStroke("#0055aa").lineTo((windowWidth/4)+50,windowHeight/2);
     stage.addChild(line);
 
 
