--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -113,9 +113,9 @@ var init = function init() {
 
 	stage.mouseMoveOutside = true; 
 
-	var line = new createjs.Shape();
-    line.graphics.moveTo(10, 100).setStrokeStyle(1).beginStroke("#0055aa").lineTo(200,400);
-    stage.addChild(line);
+   var line = new createjs.Shape();
+   line.graphics.moveTo(220,60).setStrokeStyle(1).beginStroke("#00ff00").lineTo(300,60);
+   stage.addChild(line);
 
 
 
