--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -115,7 +115,7 @@ var init = function init() {
 
 	
 	 rect = new createjs.Shape();
-	 rect.graphics.beginFill("#000").drawRect((windowWidth/4)-50, (windowHeight/2)-2, (windowWidth/4)+50, (windowHeight/2)+2);
+	 rect.graphics.beginFill("#000").drawRect((windowWidth/4)-50, (windowHeight/2)-2, 10, 10);
 	 stage.addChild(rect);
 
 
