--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -115,7 +115,7 @@ var init = function init() {
 
 	
 	 rect = new createjs.Shape();
-	 rect.graphics.beginFill("#000").drawRect((windowWidth/4)-100, (windowHeight/2)-5, 200, 10);
+	 rect.graphics.beginFill("#000").drawRect((windowWidth/4)-(windowWidth/10)), (windowHeight/2)-5, windowWidth/5, 10);
 	 stage.addChild(rect);
 
 
