--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -120,7 +120,7 @@ var init = function init() {
 
 
 	circle1 = new createjs.Shape();
-	circle1.graphics.beginFill("red").drawCircle(0, 0, 50);
+	circle1.graphics.beginFill("red").drawCircle(0, 0, windowWidth/20);
 	label1 = new createjs.Text("Drag", "bold 14px Arial", "#FFFFFF");
 	label1.textAlign = "center";
 	label1.y = -7;
