--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -122,19 +122,19 @@ var init = function init() {
 	
 
 	rect = new createjs.Shape();
-	rect.graphics.beginFill("#000").drawRect(  (windowWidth/4) - (windowWidth/10), (windowHeight/2)-2, longerDimension/5, 4);
+	rect.graphics.beginFill("#000").drawRect(  (windowWidth/4) - (longerDimension/10), (windowHeight/2)-2, longerDimension/5, 4);
 	stage.addChild(rect);
 
 	rect = new createjs.Shape();
-	rect.graphics.beginFill("#000").drawRect(  (3*windowWidth/4) - (windowWidth/10), (windowHeight/2)-2, longerDimension/5, 4);
+	rect.graphics.beginFill("#000").drawRect(  (3*windowWidth/4) - (longerDimension/10), (windowHeight/2)-2, longerDimension/5, 4);
 	stage.addChild(rect);
 
 	rect = new createjs.Shape();
-	rect.graphics.beginFill("#000").drawRect(  (windowWidth/4) - 2, (windowHeight/2)-(windowHeight/10), 4, longerDimension/5);
+	rect.graphics.beginFill("#000").drawRect(  (windowWidth/4) - 2, (windowHeight/2)-(longerDimension/10), 4, longerDimension/5);
 	stage.addChild(rect);
 
 	rect = new createjs.Shape();
-	rect.graphics.beginFill("#000").drawRect(  (3*windowWidth/4) - 2, (windowHeight/2)-(windowHeight/10), 4, longerDimension/5);
+	rect.graphics.beginFill("#000").drawRect(  (3*windowWidth/4) - 2, (windowHeight/2)-(longerDimension/10), 4, longerDimension/5);
 	stage.addChild(rect);
 
 	circle1 = new createjs.Shape();
