--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -138,7 +138,7 @@ var init = function init() {
 	stage.addChild(rect);
 
 	circle1 = new createjs.Shape();
-	circle1.graphics.beginFill("red").drawCircle(0, 0, windowWidth/20);
+	circle1.graphics.beginFill("red").drawCircle(0, 0, longerDimension/20);
 	label1 = new createjs.Text("Drag", "bold 14px Arial", "#FFFFFF");
 	label1.textAlign = "center";
 	label1.y = -7;
@@ -149,7 +149,7 @@ var init = function init() {
 	stage.addChild(dragger1);
 	
 	circle2 = new createjs.Shape();
-	circle2.graphics.beginFill("blue").drawCircle(0, 0, windowWidth/20);
+	circle2.graphics.beginFill("blue").drawCircle(0, 0, longerDimension/20);
 	label2 = new createjs.Text("Drag", "bold 14px Arial", "#FFFFFF");
 	label2.textAlign = "center";
 	label2.y = -7;
