--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -56,6 +56,7 @@
 		var pos = angleToPos(data.angle, data.distance);
 		radarDots[data.angle].graphics.beginFill("black").drawCircle(pos.x*longerDimension/5 + (windowWidth/4), pos.y*longerDimension/5+(windowHeight/2), 1);
 		stage.addChild(radarDots[data.angle]);
+		stage.update();
 	}
 
 	socket.on("radarData", function(data){
