--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -48,8 +48,9 @@
 	var lastDotAngle = 0;
 
 	function addDot(data){
-		// For example: last was 10, now is 20. Difference is 10
+		// For example: last was 350, now is 10. Difference is -340
 		var differenceFromLastAngle = data.angle - lastDotAngle;
+		if (differenceFromLastAngle < 0) {differenceFromLastAngle += 360;}
 		var direction = differenceFromLastAngle / Math.abs(differenceFromLastAngle);
 
 		for (var i = data.angle; i != lastDotAngle && i != lastDotAngle-360 && i != lastDotAngle+360; i += direction) {
