--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -45,6 +45,15 @@
 		return {x: x, y: y};
 	}
 
+	function componentToHex(c) {
+	    var hex = c.toString(16);
+	    return hex.length == 1 ? "0" + hex : hex;
+	}
+
+	function rgbToHex(r, g, b) {
+	    return "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
+	}
+
 	// Get socket.io connection
 	var socket = io();
 
@@ -62,7 +71,10 @@
 
 				radarDots[i] = new createjs.Shape();
 				var pos = angleToPos(i, radarDotDistances[i]);
-				radarDots[i].graphics.beginFill("#" + (age/100).toString() + (age/100).toString() + (age/100).toString() ).drawCircle(pos.x*longerDimension/5 + (windowWidth/4), (windowHeight/2)-pos.y*longerDimension/5, 3);
+
+				var color = rgbToHex(age/40, age/40, age/40)
+
+				radarDots[i].graphics.beginFill(color).drawCircle(pos.x*longerDimension/5 + (windowWidth/4), (windowHeight/2)-pos.y*longerDimension/5, 3);
 
 				stage.addChild(radarDots[i]);
 			}
