--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -66,7 +66,7 @@
 	}
 
 	socket.on("radarData", function(data){
-		addDot(data);
+		//addDot(data);
 	});
 
 	var sendDataInterval = setInterval(sendValues, 100);
