Radar data to web client

--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -61,7 +61,7 @@
 	}
 
 	socket.on("radarData", function(data){
-		//addDot(data);
+		addDot(data);
 	});
 
 	var sendDataInterval = setInterval(sendValues, 100);
