--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -21,7 +21,7 @@
 
 <body onresize="init()">
 	<canvas id='canvas'></canvas>
-	<img id="img" src="" width="320" height="240"/>
+	<img id="img" src="" style="width: 100%; height: 100%, position: absolute; top: 0; left: 0;"/>
 </body>
 
 <script>
