--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -10,6 +10,7 @@
 	<style>
 		#demoCanvas {
 			width: 100%;
+			z-index: 10;
 		}
 		html, body {
 			width:  100%;
@@ -21,7 +22,7 @@
 
 <body onresize="init()">
 	<canvas id='canvas'></canvas>
-	<img id="img" src="" style="width: 100%; height: 100%, position: absolute; top: 0; left: 0;"/>
+	<img id="img" src="" style="width: 100%; height: 100%, position: absolute; top: 0; left: 0; z-index: 1;"/>
 </body>
 
 <script>
