--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -22,7 +22,7 @@
 
 <body onresize="init()">
 	<canvas id='canvas'></canvas>
-	<img id="img" src="" style="width: 100%; height: 100%, position: absolute; top: 0; left: 0; z-index: 1;"/>
+	<img id="img" src="" style="width: 100%; height: 100%, position: fixed; top: 0; left: 0; z-index: 1;"/>
 </body>
 
 <script>
