--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -12,6 +12,14 @@
 			width: 100%;
 			z-index: 10;
 		}
+		#img {
+			width: 100%;
+			height: 100%;
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 1;
+		}
 		html, body {
 			width:  100%;
 			height: 100%;
@@ -21,8 +29,8 @@
 </head>
 
 <body onresize="init()">
+	<img id="img" src=""/>
 	<canvas id='canvas'></canvas>
-	<img id="img" src="" style="width: 100%; height: 100%, position: fixed; top: 0; left: 0; z-index: 1;"/>
 </body>
 
 <script>
