--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -27,6 +27,10 @@
 
 <body onresize="init()">
 	<canvas id='canvas'></canvas>
+	<div id="sensordata">
+		<p id="compass"></p>
+		<p id="distance"></p>
+	</div>
 </body>
 
 <script>
@@ -67,7 +71,9 @@
 	}
 
 	socket.on("radarData", function(data){
-		addDot(data);
+		//addDot(data);
+		$("#compass").html(data.angle);
+		$("#distance").html(data.distance);
 	});
 
 	socket.on("newImage", function(data){
