--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -15,7 +15,12 @@
 			top: 0;
 			left: 0;
 		}
-
+		#sensordata {
+			z-index: 10;
+			position: fixed;
+			top: 50%;
+			left: 50%;	
+		}
 		html, body {
 			background-size: 100% 100%;
 			width:  100%;
