--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -20,6 +20,8 @@
 			position: fixed;
 			top: 45%;
 			left: 50%;	
+			color: orange;
+			font-size: 2em;
 		}
 		html, body {
 			background-size: 100% 100%;
@@ -39,7 +41,6 @@
 </body>
 
 <script>
-
 	var movementUpdateTime = Date.now();
 	var stage, returnInterval1, returnInterval2;
 	var x1ToSend, y1ToSend, x2ToSend, y2ToSend;
