--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -22,6 +22,7 @@
 			left: 50%;	
 			color: orange;
 			font-size: 2em;
+			text-align: center;
 		}
 		html, body {
 			background-size: 100% 100%;
@@ -79,7 +80,7 @@
 	socket.on("radarData", function(data){
 		//addDot(data);
 		$("#compass").html("Angle: " + data.angle);
-		$("#distance").html("Distance: " + data.distance);
+		$("#distance").html("Distance: " + data.distance / 10 + "cm");
 	});
 
 	socket.on("newImage", function(data){
