--- a/robot/views/gamepad.ejs
+++ b/robot/views/gamepad.ejs
@@ -16,10 +16,10 @@
 			left: 0;
 		}
 		#sensordata {
+			width: 100%;
 			z-index: 10;
 			position: fixed;
 			top: 45%;
-			left: 50%;	
 			color: orange;
 			font-size: 2em;
 			text-align: center;
